2014-07-01  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/pseudotty.c: Read bytes from file descriptor 3 and feed into
	master side of pseudoterminal.
	* info/t/Init-intera.inc, info/t/Init-inter.inc: File renamed.  Create
	a pair of named pipes to communicate with pseudotty program. Get
	name of pseudoterminal slave device using shell builtin 'read'.
	* info/t/Cleanup.inc: Delete named pipes.
	* info/t/body-start.sh, info/t/end-of-line.sh, info/t/goto-quoted.sh,
	info/t/index-apropos.sh, info/t/index-long-nodeline.sh,
	info/t/index.sh, info/t/last-no-history.sh, info/t/menu-sequence.sh,
	info/t/next-quoted.sh, info/t/quoted-label-and-target.sh,
	info/t/quoted-label-as-target.sh, info/t/quoted-target.sh,
	info/t/search-after-tag.sh, info/t/split-file-menu.sh,
	info/t/split-index.sh, info/t/tab.sh: Specify input keystrokes by
	feeding into named pipe instead of using --dribble option.
	* info/t/README: Updated.

2014-06-29  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/footnotes.c (info_get_or_remove_footnotes): Null check to avoid
	crash when resizing window while displaying completions.

2014-06-29  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (incremental_search): Call get_input_key instead of
	info_get_input_byte.

	* info/session.c (fill_input_buffer): New function to call
	info_gather_typeahead.  Try to read input again if interrupted by
	a signal, as was done in info_get_input_byte.
	(info_gather_typeahead): Return code says if there was a read error.
	(info_any_buffered_input_p, get_input_key, info_search_internal): Call
	fill_input_buffer instead.
	(info_get_input_byte): Removed.

	(info_gather_typeahead): [--dribble] Call dribble to save input bytes.
	(get_input_key): [--dribble] Don't call dribble.

2014-06-29  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (info_get_another_input_byte): Removed.
	* info/echo-area.c (ea_quoted_insert): Call get_another_input_key
	instead.

2014-06-28  Gavin Smith  <gavinsmith0123@gmail.com>